--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -41,3 +41,9 @@
   text-decoration: underline;
   color: var(--warm-grey-700);
 }
+
+@media only screen and (max-width: 740px) {
+  .col {
+    margin-bottom: 2rem;
+  }
+}
