--- a/src/components/ShadowTitle.module.css
+++ b/src/components/ShadowTitle.module.css
@@ -3,7 +3,6 @@
     grid-template-columns: auto 1fr auto;
     align-items: end;
     margin-bottom: 1rem;
-    /* overflow-x: hidden; */
 }
 
 .shadowTitle {
@@ -30,13 +29,16 @@
     user-select: none;
     white-space: nowrap;
     z-index: -1;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
 }
 
 @media only screen and (max-width: 740px) {
     .shadow {
         opacity: .1;
-        font-size: 15vw;
-        line-height: 0.9;
+        font-size: 5rem;
+        line-height: 1.1;
+        width: 100vw;
+        margin-left: 50%;
+        transform: translateX(-50%);
     }
   }
